# Python-Code-Dump

./: .cspell.json  .gitignore  .jscpd.json  .mega-linter.yml  armstrong_number.py  element_multiplier.py  factors.py  faulty_email.py  fixed_warehouse_size.py  grade_five_subjects.py  guess_the_number.py  icecream_survey.py  library_manager.py  list_of_squares.py  matrix_addition.py  palindrome.py  prac_v2.py  pyproject.toml  readme.md  requirements.txt  reverse_a_number.py  seperate_odd_evens.py  smallest_divisor.py  sort_by_last_digit.py  student_records.py  triangle_determiner.py  vowel_counter.py  vowel_detailed_counter.py  weight_converter.py
.devcontainer/: devcontainer.json
.github/workflows/: mega-linter.yml
.trunk/: trunk.yaml
HackerRank/: bigger_is_greater.py  hacker_rank_question.py  time_in_words.py
Python game Examples/: animating_snow.py  array_backed_grid.py  background_music.py  bitmapped_graphics.py  bounce_ball_with_paddle.py  bouncing_rectangle.py  breakout_simple.py  bullets.py  draw_module_example.py  exception_handling.py  for_loop_examples.py  fractal.py  functions_and_graphics.py  game_class_example.py  game_over.py  gfxtest.py  grid_backed_map.py  high_score.py  instruction_screen.py  joystick_calls.py  maze_runner.py  move_game_controller.py  move_keyboard.py  move_mouse.py  move_sprite_game_controller.py  move_sprite_keyboard_jump.py  move_sprite_keyboard_smooth.py  move_sprite_mouse.py  move_with_walls_example.py  moving_sprites.py  moving_sprites_bounce.py  network_client.py  network_server_blocking.py  network_server_nonblocking.py  number_guessing_game.py  opengl_lesson01.py  pick_up_blocks.py  platform_jumper.py  platform_moving.py  platform_scroller.py  (+20 more)
Python game Examples/sprite_sheets/: constants.py  levels.py  platform_scroller.py  platforms.py  player.py  spritesheet_functions.py
src/: armstrong_number.py  celsius_to_fahrenheit.py  celsius_to_farenheit.py  element_multiplier.py  even_odd.py  factors.py  faulty_email.py  fibonacci.py  fixed_warehouse_size.py  font_menu.py  grade_five_subjects.py  grades.py  guess_the_number.py  icecream_survey.py  leap_year.py  library_manager.py  list_of_squares.py  matrix_addition.py  palindrome.py  prime_check.py  reverse_a_number.py  salary_calculator.py  seperate_odd_evens.py  smallest_divisor.py  sort_by_last_digit.py  star_rectangle.py  student_records.py  sum_of_digits.py  triangle_determiner.py  vowel_counter.py  vowel_detailed_counter.py  weekday_name.py  weight_converter.py
src/HackerRank/: bigger_is_greater.py  time_in_words.py
src/Python game Examples/: animating_snow.py  array_backed_grid.py  background_music.py  bitmapped_graphics.py  bounce_ball_with_paddle.py  breakout_simple.py  calculate_kinetic_energy.py  calculate_miles_per_gallon.py  draw_module_example.py  fractal.py  game_over.py  grid_backed_map.py  high_score.py  if_statement_examples.py  instruction_screen.py  maze_runner.py  move_keyboard.py  move_sprite_keyboard_smooth.py  move_with_walls_example.py  moving_sprites.py  network_client.py  network_server_nonblocking.py  number_guessing_game.py  opengl_lesson01.py  platform_jumper.py  pong.py  radar_sweep.py  simple_encryption.py  simple_web_server.py  snake.py  sorting_examples.py  sorting_examples2.py  timer.py  while_loop_examples.py  word_search.py
src/Student_Records/: student_records.py
src/library_manager/: Books.xlsx  Details.xlsx  library_manager.py
to-sort-out/: Bans Formatter.py  DS-Graduate.py  DS-Titanic.py  Fibbo.py  Jarvis.py  N-Queens.py  Notepad.py  box and sticks.py  motivational sports schedule.py  new_file.txt  q1.py  q2.py  qq1.py  qqqq1.py  qqqq2.py
to-sort-out/API Server/: api-server.py
