[project]
name = "Python-Code-Dump"
version = "0.0.0"
description = "A collection of Python code snippets and scripts"
dependencies = ["pygame", "easygui", "openpyxl", "xlrd"]

[tool.poetry]
name = "python-code-dump"
version = "0.0.0"
description = "A collection of Python code snippets and scripts"
authors = ["MRDGH2821 <ask.mrdgh2821@outlook.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8.10"
pygame = "^2.5.2"
easygui = "^0.98.3"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.3.0"
autopep8 = "^2.0.4"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ["platform_scroller.py"]
