[project]
name = "Python-Code-Dump"
version = "0.0.0"
description = "A collection of Python code snippets and scripts"
dependencies = ["easygui>=0.98.3", "openpyxl>=3.1.2", "pyopengl>=3.1.7"]
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
  "mypy>=1.9.0",
  "ruff>=0.3.3",
  "types-openpyxl>=3.1.0.20240311",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_code_dump"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  "__pypackages__",
  "_build",
  ".bzr",
  ".direnv",
  ".eggs",
  ".git-rewrite",
  ".git",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
fix = true
respect-gitignore = true

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true
line-ending = "lf"
indent-style = "space"
docstring-code-line-length = "dynamic"
quote-style = "double"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
