[project]
name = "Python-Code-Dump"
version = "0.0.0"
description = "A collection of Python code snippets and scripts"
dependencies = ["easygui>=0.98.3", "openpyxl>=3.1.2", "pyopengl>=3.1.7"]
readme = "README.md"
requires-python = ">=3.8"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye]
dev-dependencies = [
  "mypy>=1.9.0",
  "ruff>=0.3.3",
  "types-openpyxl>=3.1.0.20240311",
]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_code_dump"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  "__pypackages__",
  "_build",
  ".bzr",
  ".direnv",
  ".eggs",
  ".git-rewrite",
  ".git",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
fix = true
respect-gitignore = true

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
fixable = ["ALL"]
select = ["ALL"]
ignore = ["T201", "INP001", "ANN102", "ANN101"]
